# dbusmm

./: README.md  autogen.sh  bitbucket-pipelines.yml  config.h.in  configure.ac  dbusmm-1.0.pc.in  dbusmm_config.h.in
debian/: README.Debian  changelog  control  copyright  libdbusmm-1.0-1.install  libdbusmm-1.0-dev.install  libdbusmm-1.0-dev.manpages  libdbusmm-1.0-doc.doc-base  libdbusmm-1.0-doc.install  libdbusmm-1.0-doc.links  rules
docs/: Makefile.am
docs/reference/: Makefile.am  dbusmm-header.html
examples/echo/: Makefile.am  echo-client.cpp  echo-client.h  echo-server.h
examples/glib/: Makefile.am  dbus-browser.cpp  dbus-browser.h
examples/hal/: hal-listen.cpp  hal-listen.h
include/dbus-c++/: dbus.h
include/dbusmm/: connection.h  dbus.h  dbusmm_config.h.in  debug.h  dispatcher.h  error.h  eventloop-integration.h  eventloop.h  interface.h  introspection.h  message.h  pendingcall.h  property.h  refptr_impl.h  server.h  types.h  util.h
src/: Makefile.am  connection.cpp  connection_p.h  debug.cpp  dispatcher.cpp  dispatcher_p.h  error.cpp  eventloop.cpp  glib-integration.cpp  interface.cpp  internalerror.h  introspection.cpp  message.cpp  message_p.h  pendingcall_p.h  server.cpp  server_p.h  types.cpp
tools/: Makefile.am  introspect.h  xml.cpp  xml.h  xml2cpp.cpp  xml2cpp.h
trunk/: Makefile.am  config.h.in  configure.ac  dbusmm-1.0.pc.in
trunk/data/: Makefile.am
trunk/debian/: README.Debian  dbusmm-introspect.1  libdbusmm-1.0-1.shlibs  rules
trunk/docs/reference/: Doxyfile.in
trunk/examples/echo/: README  echo-client.cpp  echo-server.cpp
trunk/examples/hal/: Makefile.am
trunk/examples/properties/: Makefile.am  README  props-server.h
trunk/include/dbusmm/: api.h  connection.h  dbus.h  debug.h  dispatcher.h  eventloop.h  glib-integration.h  introspection.h  message.h  object.h  property.h  refptr_impl.h  types.h  util.h
trunk/src/: connection_p.h  debug.cpp  eventloop-integration.cpp  message.cpp  message_p.h  object.cpp  pendingcall.cpp  pendingcall_p.h  property.cpp  server_p.h  types.cpp
trunk/tools/: introspect.cpp  introspect.h  xml.h  xml2cpp.cpp
