SUBDIRS = src tools data docs examples

EXTRA_DIST = autogen.sh dbusmm_config.h.in dbusmm-1.0.pc.in

dbusmm_configdir	= $(libdir)/dbusmm-1.0/include
dbusmm_config_DATA	= dbusmm_config.h

pkgconfigdir 		= $(libdir)/pkgconfig
pkgconfig_DATA 		= dbusmm-1.0.pc


MAINTAINERCLEANFILES = \
	configure \
	Makefile.in \
	aclocal.m4 \
	compile \
	config.guess \
	config.sub \
	depcomp \
	install-sh \
	ltmain.sh \
	mdate-sh \
	missing \
	mkinstalldirs
